applications/base/media/gluetun-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gluetun
  namespace: media
  labels:
    pihole-dns-enabled: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.6.28"
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-system
      sectionName: https
  hostnames:
    - "gluetun.local.abbottland.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /healthz
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: gluetun-http
          port: 9999
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gluetun-http
          port: 8000
